[package]
name = "csaf_publisher"
description = "Tool to apply Stackable specific customizations to CSAF documents and store them in a directory structure, so they can be published in a Git repository."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.45"
color-eyre = "0.6.5"
csaf = "0.5.0"
hex = "0.4.3"
pgp = "0.20.0"
rand = "0.8.5"
regex = "1.12.4"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "query", "rustls"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
